# rust-examples

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
01-hello-rust/: README.md
02-hello-rust-dependencies/: README.md
02-hello-rust-dependencies/src/: main.rs
advanced/: README.md
advanced/01-async-tasks/: Cargo.toml  README.md
advanced/01-async-tasks/src/: lib.rs  main.rs
advanced/02-http-api/: Cargo.toml  README.md
advanced/02-http-api/src/: lib.rs  main.rs
advanced/03-postgres/: .env.example  Cargo.toml  README.md  compose.yaml
advanced/03-postgres/src/: lib.rs  main.rs
advanced/04-redis-cache/: .env.example  Cargo.toml  README.md  compose.yaml
advanced/04-redis-cache/src/: lib.rs  main.rs
advanced/05-observability/: Cargo.toml  README.md
advanced/05-observability/src/: lib.rs  main.rs
advanced/06-zero-copy-parsing/: Cargo.toml  README.md
advanced/06-zero-copy-parsing/src/: lib.rs  main.rs
advanced/07-typestate/: Cargo.toml  README.md
advanced/07-typestate/src/: lib.rs  main.rs
advanced/08-safe-unsafe/: Cargo.toml  README.md
advanced/08-safe-unsafe/src/: lib.rs  main.rs
basic/: README.md
basic/01-hello-rust/: Cargo.toml  README.md
basic/01-hello-rust/src/: main.rs
basic/02-hello-rust-dependencies/: Cargo.toml  README.md
basic/02-hello-rust-dependencies/src/: main.rs
basic/03-variables-and-types/: Cargo.toml  README.md
basic/03-variables-and-types/src/: lib.rs  main.rs
basic/04-functions-and-expressions/: Cargo.toml  README.md
basic/05-control-flow/: Cargo.toml  README.md
basic/06-strings-and-unicode/: Cargo.toml  README.md
basic/07-ownership/: Cargo.toml  README.md
basic/08-borrowing/: Cargo.toml  README.md
basic/09-structs-and-methods/: Cargo.toml  README.md
basic/10-enums-and-match/: Cargo.toml  README.md
basic/11-option-and-result/: Cargo.toml  README.md
basic/12-collections-and-iterators/: Cargo.toml  README.md
capstone/: README.md
capstone/coffee-platform/: .env.example  Cargo.toml  README.md  compose.yaml
capstone/coffee-platform/src/: lib.rs  main.rs
docs/: example-template.md  glossary.md
hello-rust/: README.md
hello-rust-dependencies/: Cargo.toml
hello-rust-dependencies/src/: main.rs
(+18 files in other folders)
