[package]
name = "postgres-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.53", features = ["macros", "rt-multi-thread"] }
