[package]
name = "redis-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio = { version = "1.53", features = ["macros", "rt-multi-thread"] }
