[package]
name = "coffee-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8.9"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.53", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
